--- a/crds/variable.yaml
+++ b/crds/variable.yaml
@@ -1,10 +1,17 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: variables.airflow.drfaust92
 spec:
-  scope: Namespaced
   group: airflow.drfaust92
+  scope: Namespaced
+  names:
+    kind: Variable
+    plural: variables
+    singular: variable
+    shortNames:
+      - vars
+      - var
   versions:
     - name: v1beta1
       served: true
@@ -22,10 +29,3 @@ spec:
                 description:
                   type: string
                   description: The variable description.
-  names:
-    kind: Variable
-    plural: variables
-    singular: variable
-    shortNames:
-      - vars
-      - var
