--- a/chart/airflow-k8s-operator/values.yaml
+++ b/chart/airflow-k8s-operator/values.yaml
@@ -71,28 +71,20 @@ resources:
 #     path: /
 #     port: http
 
-# This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+# Additional volumes on the output Deployment definition.
+volumes:
+  []
+  # - name: foo
+  #   secret:
+  #     secretName: mysecret
+  #     optional: false
 
-# # Additional volumes on the output Deployment definition.
-# volumes:
-#   []
-#   # - name: foo
-#   #   secret:
-#   #     secretName: mysecret
-#   #     optional: false
-
-# # Additional volumeMounts on the output Deployment definition.
-# volumeMounts:
-#   []
-#   # - name: foo
-#   #   mountPath: "/etc/foo"
-#   #   readOnly: true
+# Additional volumeMounts on the output Deployment definition.
+volumeMounts:
+  []
+  # - name: foo
+  #   mountPath: "/etc/foo"
+  #   readOnly: true
 
 nodeSelector: {}
 
