--- a/chart/airflow-k8s-operator/templates/deployment.yaml
+++ b/chart/airflow-k8s-operator/templates/deployment.yaml
@@ -38,14 +38,29 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          # {{- with .Values.livenessProbe }}
-          # livenessProbe:
-          #   {{- toYaml . | nindent 12 }}
-          # {{- end }}
-          # {{- with .Values.readinessProbe }}
-          # readinessProbe:
-          #   {{- toYaml . | nindent 12 }}
-          # {{- end }}
+          ports:
+            - name: http
+              containerPort: {{ .Values.port }}
+          {{- with .Values.envFrom }}
+          envFrom:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          env:
+            - name: LOG_LEVEL
+              value: "{{ .Values.operator.logLevel }}"
+            - name: LOG_FORMAT
+              value: "{{ .Values.operator.logFormat }}"
+            {{- if .Values.livenessProbe }}
+            - name: LIVENESS_PROBE
+              value: {{ tpl .Values.operator.livenessProbeAddress . | quote }}
+            {{- end }}
+            {{- with .Values.env }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
+          {{- with .Values.livenessProbe }}
+          livenessProbe:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
