--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -3,7 +3,7 @@ name: integration-test
 on: pull_request
 
 jobs:
-  test:
+  testV1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -26,6 +26,7 @@ jobs:
       
       - name: Install Airflow
         run: |
+          # Airflow v2 (v1 API)
           helm upgrade --install airflow apache-airflow/airflow --version 1.16.0 \
             --set postgresql.image.repository=bitnamilegacy/postgresql \
             --set postgresql.image.tag=16.1.0-debian-11-r15 \
@@ -54,6 +55,79 @@ jobs:
         run: |
           kubectl port-forward svc/airflow-webserver 8080:8080 &
           sleep 5
+
+      - name: install test dependencies
+        run: uv sync --group test
+
+      - name: Run operator test
+        run: uv run pytest tests/operator_test.py
+
+  testV2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5 # uses .python-version file by default
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+      
+      - name: Install dependencies
+        run: uv sync
+      
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1
+
+      - name: Add Airflow Helm repository
+        run: helm repo add apache-airflow https://airflow.apache.org && helm repo update
+      
+      - name: Install Airflow
+        run: |
+          # Airflow v3 (v2 API)
+          helm upgrade --install airflow apache-airflow/airflow --version 1.18.0 \
+            --set postgresql.image.repository=bitnamilegacy/postgresql \
+            --set postgresql.image.tag=16.1.0-debian-11-r15 \
+            --set executor=KubernetesExecutor \
+            --set workers.replicas=0 \
+            --set redis.enabled=false \
+            --set triggerer.enabled=false \
+            --set statsd.enabled=false \
+            --set createUserJob.useHelmHooks=false \
+            --set createUserJob.applyCustomEnv=false \
+            --set migrateDatabaseJob.useHelmHooks=false \
+            --set migrateDatabaseJob.applyCustomEnv=false \
+            --set webserver.resources.requests.memory=1Gi \
+            --set webserver.resources.limits.memory=1Gi \
+            --set config.api.auth_backend=airflow.api.auth.backend.basic_auth \
+            --timeout 3m \
+            --wait
+
+      - name: Set Airflow environment variable
+        run: |
+          echo "AIRFLOW_HOST=http://localhost:8080" >> $GITHUB_ENV
+          echo "AIRFLOW_API_BASE_URL=/api/v2" >> $GITHUB_ENV
+
+      - name: Obtain Airflow JWT token
+        run: |
+          set -euo pipefail
+          kubectl port-forward svc/airflow-api-server 8080:8080 &
+          sleep 5  # wait for port-forward to be established
+          # Try to install jq if it's not present
+          if ! command -v jq >/dev/null 2>&1; then
+            echo "jq not found, installing..."
+            sudo apt-get update && sudo apt-get install -y jq
+          fi
+
+          resp=$(curl -s -X POST "${AIRFLOW_BASE_ENDPOINT}/auth/token" -H 'Content-Type: application/json' -d '{"username": "admin", "password": "admin"}')
+          # extract token - try common fields
+          token=$(echo "$resp" | jq -r '.access_token // .token // .access // empty')
+          if [ -z "$token" ] || [ "$token" = "null" ]; then
+            echo "Failed to obtain token from response: $resp"
+            exit 1
+          fi
+          echo "AIRFLOW_ACCESS_TOKEN=$token" >> $GITHUB_ENV
 
       - name: install test dependencies
         run: uv sync --group test
