fix clusterRoleBinding missing namespace
Signed-off-by: AvivGuiser <avivguiser@gmail.com>

--- a/chart/airflow-k8s-operator/templates/rbac.yaml
+++ b/chart/airflow-k8s-operator/templates/rbac.yaml
@@ -28,3 +28,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "airflow-k8s-operator.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
