--- a/chart/airflow-k8s-operator/templates/secret.yaml
+++ b/chart/airflow-k8s-operator/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.operator.basicAuthSecret.create }}
+{{- if and .Values.operator.basicAuthSecret.enabled .Values.operator.basicAuthSecret.create }}
 apiVersion: v1
 kind: Secret
 metadata:
