tidy up for initial release
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/chart/airflow-k8s-operator/templates/deployment.yaml
+++ b/chart/airflow-k8s-operator/templates/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   replicas: 1
   strategy:
-    type: Recreate
+    type: Recreate # Airflow Operator should have only one active pod as there is no leader election
   selector:
     matchLabels:
       {{- include "airflow-k8s-operator.selectorLabels" . | nindent 6 }}
