tidy up for initial release
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/chart/airflow-k8s-operator/templates/deployment.yaml
+++ b/chart/airflow-k8s-operator/templates/deployment.yaml
@@ -43,7 +43,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: metrics
-              containerPort: {{ .Values.containerPort }}
+              containerPort: {{ .Values.metricsPort }}
             - name: http
               containerPort: {{ .Values.port }}
           {{- with .Values.envFrom }}
