--- a/.github/workflows/helm-ci.yaml
+++ b/.github/workflows/helm-ci.yaml
@@ -38,6 +38,7 @@ jobs:
         run: ct lint --config config.yaml --target-branch ${{ github.event.repository.default_branch }}
 
       - name: Build and push Docker image
+        if: steps.list-changed.outputs.changed == 'true'
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64
