pass logformat and liveness probe from the values.yaml
Signed-off-by: AvivGuiser <avivguiser@gmail.com>

--- a/chart/airflow-k8s-operator/values.yaml
+++ b/chart/airflow-k8s-operator/values.yaml
@@ -175,3 +175,5 @@ operator:
     passwordKey: AIRFLOW_PASSWORD
   # -- (string) liveness probe address for the operator
   livenessProbeAddress: "http://0.0.0.0:{{ .Values.port }}/healthz"
+  # -- (string) log format for the operator (full, json, simple)
+  logFormat: "json"
