--- a/.github/workflows/helm-ci.yaml
+++ b/.github/workflows/helm-ci.yaml
@@ -49,6 +49,8 @@ jobs:
       - name: Create kind cluster
         if: steps.list-changed.outputs.changed == 'true'
         uses: helm/kind-action@v1.12.0
+        with:
+          cluster_name: kind-chart-testing
       - name: Load Docker image into kind
         if: steps.list-changed.outputs.changed == 'true'
         run: |
