--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 chart-dirs:
   - chart
-helm-lint-extra-args: --set operator.airflowHost=airflow.example.com
+helm-lint-extra-args: --set operator.airflowHost=airflow.example.com --set image.tag=ci-test --set image.repository=airflow-k8s-operator
