--- a/chart/airflow-k8s-operator/templates/deployment.yaml
+++ b/chart/airflow-k8s-operator/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: [ "--log-format={{ .Values.operator.logFormat }}", "--liveness={{ tpl .Values.operator.livenessProbeAddress . }}"]
+          args: [ "--log-format={{ .Values.operator.logFormat }}", "--liveness={{ tpl .Values.operator.livenessProbeAddress . }}"]
           ports:
             - name: metrics
               containerPort: {{ .Values.metricsPort }}
